Cambio de domicilio

--- a/w_report_projects/report/template_project_task_equipment_delivery.xml
+++ b/w_report_projects/report/template_project_task_equipment_delivery.xml
@@ -191,7 +191,7 @@
                         <div class="col-1">
                         </div>
                         <div class="col-10">
-                            <p style="text-align: center;">Escape No. 3-A Local 2, Industrial Alce Blanco, C.P. 53370 Naucalpan de Juárez, Méxcio.</p>
+                            <p style="text-align: center;">Av. Ingenieros Militares No. 111-B, Col. Lomas de Sotelo, 11200, CDMX</p>
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -199,7 +199,7 @@
                         <div class="col-1">
                         </div>
                         <div class="col-10">
-                            <p style="text-align: center;">Tels.: 5559 4206  5359 4363 Fax: 5358 3913</p>
+                            <p style="text-align: center;">Tels.: 55 5359 0088, 55 5359 4206 y 55 5359 4363</p>
                         </div>
                         <div class="col-1"></div>
                     </div>
